<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_exhibits"
            android:icon="@drawable/ic_menu_exhibits"
            android:title="@string/menu_exhibits" />
        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/ic_menu_qr"
            android:title="@string/menu_qr" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_contact"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>

</menu>
