<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.sfedu.ictis.museumapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_exhibit_profile"
        android:name="ru.sfedu.ictis.museumapp.ui.exhibit_profile.ExhibitProfile"
        android:label="Экспонат"
        tools:layout="@layout/exhibit_profile_fragment">
        <argument
            android:name="exhibitId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_exhibits"
        android:name="ru.sfedu.ictis.museumapp.ui.exhibits.ExhibitsFragment"
        android:label="@string/menu_exhibits"
        tools:layout="@layout/fragment_exhibits">
    <argument
        android:name="exhibitId"
        app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_qr"
        android:name="ru.sfedu.ictis.museumapp.ui.qr.QrFragment"
        android:label="@string/menu_qr"
        tools:layout="@layout/fragment_qr">
        <action
            android:id="@+id/action_nav_qr_to_nav_exhibit_profile"
            app:destination="@id/nav_exhibit_profile" />
    </fragment>

    <fragment
        android:id="@+id/nav_contact"
        android:name="ru.sfedu.ictis.museumapp.ui.tools.ToolsFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_about"
        android:name="ru.sfedu.ictis.museumapp.ui.share.ShareFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
</navigation>